$Id$
	
2004-09-16: Added field :initbind e to (x :in l) clause of
            'repeat'. The expression e is evaluated and bound to x
            initially.  This is purely to satisfy some compilers that
            complain if x is declared to be of some type incompatible
            with an initial value of nil.  (Version 1.4.4)

2004-09-11: Change 'ytools-module-load' in module.lisp so that
            expansion of module is evalualated when module is loaded.

2004-09-02: Replace 'assoc' with 'assq' in expansion of 'alist-entry'
            (to avoid confusing Nisp). (Version 1.4.3)

2004-08-22: Interaction between 'outin' and pretty-printer streamlined.
	
2004-08-11: Stuff after :proceed and :prompt-for is now a list of args
            suitable for 'out'.  In the case of :prompt-for, the last
	    element is the default, and the out-args don't include that
	    last element.
	
2004-08-09: Change in bq.lisp to allow other files to use its facilities.
	    Invisible to users.  Changed logic in 'fload' so after asking
	    whether to compile a previously uncompiled file it doesn't
	    consider loading old (nonexistent) object code.  (Version 1.4.2)
	
2004-08-06: Introduced :|| as prettier synonym for :\|
	
2004-08-03: Altered implementation of '!' dispatch macro; change
            invisible to users.  Another invisible change to
            subr-synonym (allows specification of numargs).
	
2004-07-30: Made ytdoc.pdf part of the CVS system, so it will be part of
            the "nightly snapshot."  (Version 1.4.1)
	
2004-07-25: Adding 'nthrest'
	
2004-07-10: Simplified Qvar as type	
	
2004-07-09: Added gen-var
	
2004-07-06: Tiny bug fix in setter
	
2004-06-25: Further enhancements to alref. .  Made packages work in
	    names of YTools logical pathnames.  Fixed bug in 'repeat'
	    for var notation (v e0 :then e1) so it's the same as (v =
	    e0 :then e1).  Got 'fload-recheck' working correctly.
	    Version 1.4
	